# cmus-rpc-rs

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
assets/: from.txt
assets/cover/: blue.psd  pink.psd
src/: main.rs
src/args/: args.rs  cli_options.rs  mod.rs
src/cmus/: mod.rs  responce.rs  tracker.rs
src/config/: Config.rs  ConfigFile.rs  config.rs  config_file.rs  mod.rs
src/debug/: debugger.rs  mod.rs
src/discord/: DiscordController.rs  discord_controller.rs  formatter.rs  mod.rs
translations/: README-jp.md
