[package]
name = "cmus-rpc-rs"
authors = ["anas-elgarhy"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Discord Rich Presence for cmus player using rust 🦀💙"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]
repository = "https://github.com/anas-elgarhy/cmus-rpc-rs"
homepage = "https://github.com/anas-elgarhy/cmus-rpc-rs"
keywords = [
    "cmus",
    "rpc",
    "cmus-rpc",
    "cmus-rich-presence",
]
categories = [
    "command-line-interface",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.3"
clap = "3.2.25" # 4.^ it will break the code :(
dirs = "5.0.0"
